force-app/main/default/objects/COC_Team_Member__c/COC_Team_Member__c.object-meta.xml
<CustomObject>
    <description>This is for the COC Bulk Buy Request Process . The</description>
    <label>COC Team Member</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>COC Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COC Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>