force-app/main/default/objects/COC_Team_Member__c/fields/Letter_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Letter_Sort_Order__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Letter Sort Order</label>
    <length>200</length>
    <type>Text</type>
</CustomField>