force-app/main/default/objects/COC_Team_Member__c/fields/Name_And_Team__c.field-meta.xml
<CustomField>
    <fullName>Name_And_Team__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name And Team</label>
    <length>200</length>
    <type>Text</type>
</CustomField>