force-app/main/default/objects/COC_Team_Member__c/fields/SFDCAccountName__c.field-meta.xml
<CustomField>
    <fullName>SFDCAccountName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SFDCAccountName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>