force-app/main/default/objects/COC_Team_Member__c/fields/Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>COC_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>