force-app/main/default/objects/COC_Team_Member__c/fields/Team_Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Team Lead Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>