force-app/main/default/objects/COC_Team_Member__c/fields/TeamID__c.field-meta.xml
<CustomField>
    <fullName>TeamID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TeamID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>