force-app/main/default/objects/COC_Team_Member__c/fields/Territory_Leader__c.field-meta.xml
<CustomField>
    <fullName>Territory_Leader__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Territory Leader</label>
    <length>200</length>
    <type>Text</type>
</CustomField>