force-app/main/default/objects/COC_Team_Member__c/fields/Territory_Number__c.field-meta.xml
<CustomField>
    <fullName>Territory_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Territory Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>