force-app/main/default/objects/COC_Team_Member__c/fields/TerritorySFDCAccountId__c.field-meta.xml
<CustomField>
    <fullName>TerritorySFDCAccountId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TerritorySFDCAccountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>